--- a/index.html
+++ b/index.html
@@ -29,8 +29,32 @@
         <a href="#" class="btn btn--white">Discover our tours</a>
       </div>
     </header>
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-8">
+          <h2 class="heading-secondary">
+            Exciting tours for adventorous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            Text Content
+          </div>
+          <div class="col-1-of-2">
+            Image Composition
+          </div>
+        </div>
+      </section>
+    </main>
 
-    <section class="grid-test">
+    <!-- main element contains the main part of your site -->
+    <!-- tag used for the benefit of crawlers and screen readers-->
+
+    <!-- to use Emmet shortcut: -->
+    <!-- .about(tab) creates a div with the class="about"-->
+    <!-- section.about(tab) creates a section element with the class="about"-->
+
+    <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">
           Col 1 of 2
@@ -98,6 +122,6 @@
             </div>
 
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
