Adding content to About Section. added h3s, ps and button in left column, and imgs in right column. stacked imgs on top of one another using absolute positioning and added animations, where the hovered img gets bigger and the non-hovered imgs get smaller. Location: Sass > components > _composition.scss

--- a/index.html
+++ b/index.html
@@ -31,17 +31,49 @@
     </header>
     <main>
       <section class="section-about">
-        <div class="u-center-text u-margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
-            Exciting tours for adventorous people
+            Exciting tours for adventurous people
           </h2>
         </div>
         <div class="row">
           <div class="col-1-of-2">
-            Text Content
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+              quibusdam, nemo consectetur reprehenderit magnam, id aspernatur
+              quisquam necessitatibus quasi.
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventurous like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Aspernatur, nostrum corrupti iure ullam minima accusamus,
+              suscipit!
+            </p>
+            <a href="#" class="btn-text">Learn More &rarr;</a>
           </div>
           <div class="col-1-of-2">
-            Image Composition
+            <div class="composition">
+              <img
+                src="img/nat-1-large.jpg"
+                class="composition__photo composition__photo--p1"
+                alt="Landscape of cliffs, trees and a stream with a blue sky"
+              />
+              <img
+                src="img/nat-2-large.jpg"
+                class="composition__photo composition__photo--p2"
+                alt="Person cycling alone on a road in the countryside"
+              />
+              <img
+                src="img/nat-3-large.jpg"
+                class="composition__photo composition__photo--p3"
+                alt="Person hiking on top of a large hill at sunset"
+              />
+            </div>
           </div>
         </div>
       </section>
