--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
           </h2>
         </div>
         <div class="row">
+          <!--CARD 1 -->
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front card__side--front-1">
@@ -156,12 +157,95 @@
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back-1">
-                BACK
+                <!--back content-->
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">£297</p>
+                    <a href="#" class="btn btn--white u-margin-top-big"
+                      >Book Now</a
+                    >
+                  </div>
+                </div>
+                <!--back content-->
               </div>
             </div>
           </div>
-          <div class="col-1-of-3"></div>
-          <div class="col-1-of-3"></div>
+          <!--CARD 2-->
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front card__side--front-2">
+                <div class="card__picture card__picture--2">&nbsp;</div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span--2">
+                    The Forest Hiker
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>7 day tour</li>
+                    <li>Up to 40 people</li>
+                    <li>6 tour guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: medium</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-2">
+                <!--back content-->
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">£497</p>
+                    <a href="#" class="btn btn--white u-margin-top-big"
+                      >Book Now</a
+                    >
+                  </div>
+                </div>
+                <!--back content-->
+              </div>
+            </div>
+          </div>
+          <!--CARD 3-->
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front card__side--front-3">
+                <div class="card__picture card__picture--3">&nbsp;</div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span--3">
+                    The Snow Adventurer
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>5 day tour</li>
+                    <li>Up to 15 people</li>
+                    <li>3 tour guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: hard</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-3">
+                <!--back content-->
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">£897</p>
+                    <a href="#" class="btn btn--white u-margin-top-big"
+                      >Book Now</a
+                    >
+                  </div>
+                </div>
+                <!--back content-->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!--DISCOVER MORE BTN-->
+        <div class="u-center-text u-margin-top-big">
+          <a href="#" class="btn btn--primary">Discover All Tours</a>
         </div>
       </section>
     </main>
@@ -182,7 +266,6 @@
           Col 1 of 2
         </div>
       </div>
-
       <div class="row">
         <div class="col-1-of-3">
           Col 1 of 3
@@ -194,7 +277,6 @@
           Col 1 of 3
         </div>
       </div>
-
         <div class="row">
           <div class="col-1-of-3">
             Col 1 of 3
@@ -203,7 +285,6 @@
             Col 2 of 3
           </div>
         </div>
-
           <div class="row">
             <div class="col-1-of-4">
               Col 1 of 4
@@ -218,7 +299,6 @@
               Col 1 of 4
             </div>
           </div>
-
           <div class="row">
             <div class="col-1-of-4">
               Col 1 of 4
@@ -230,7 +310,6 @@
               Col 2 of 4
             </div>
           </div>
-
             <div class="row">
               <div class="col-1-of-4">
                 Col 1 of 4
@@ -239,7 +318,6 @@
                 Col 3 of 4
               </div>
             </div>
-
       </div>
     </section> -->
   </body>
