--- a/index.html
+++ b/index.html
@@ -248,6 +248,37 @@
           <a href="#" class="btn btn--primary">Discover All Tours</a>
         </div>
       </section>
+
+      <!-- SECTION STORIES-->
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            We make people happy
+          </h2>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+                aut cupiditate pariatur optio ullam at doloremque, iste facilis
+                voluptatem? Omnis fugiat quidem ducimus natus ratione non
+                explicabo saepe culpa voluptatem.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- main element contains the main part of your site -->
