adding img hover styling. on hover: figcaption appears, img zooms in (using scale property), and also blurs and darkens (using filter property). Location: _story.scss

--- a/index.html
+++ b/index.html
@@ -251,11 +251,13 @@
 
       <!-- SECTION STORIES-->
       <section class="section-stories">
+        <!--H2-->
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             We make people happy
           </h2>
         </div>
+        <!--BOX 1-->
         <div class="row">
           <div class="story">
             <figure class="story__shape">
@@ -264,6 +266,7 @@
                 alt="Person on a tour"
                 class="story__img"
               />
+              <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">
@@ -277,6 +280,35 @@
               </p>
             </div>
           </div>
+        </div>
+        <!--BOX 2-->
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Wow! My life is completely different now.
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+                aut cupiditate pariatur optio ullam at doloremque, iste facilis
+                voluptatem? Omnis fugiat quidem ducimus natus ratione non
+                explicabo saepe culpa voluptatem.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!--BUTTON-->
+        <div class="u-center-text u-margin-top-big">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
     </main>
