added background video to testimonials section. Location: _bg-video.scss

--- a/index.html
+++ b/index.html
@@ -251,6 +251,13 @@
 
       <!-- SECTION STORIES-->
       <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            Your browser is not supported
+          </video>
+        </div>
         <!--H2-->
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
