adding input boxes to form. Used :invalid pseudoclass to apply different border colours depending on whether user input is valid or not. Styled the placeholder pseudo-element in the input boxes. finally styled label so that it drops down only when placeholder is shown (i.e. there is no user input)

--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
                     required
                   />
                   <label for="name" class="form__label">Full Name</label>
+                  <br /><br />
                   <input
                     type="email"
                     class="form__input"
@@ -346,7 +347,7 @@
                     id="email"
                     required
                   />
-                  <label for="email" class="form__email">Email Address</label>
+                  <label for="email" class="form__label">Email Address</label>
                 </div>
               </form>
             </div>
