--- a/index.html
+++ b/index.html
@@ -384,6 +384,48 @@
       </section>
     </main>
 
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo" />
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact Us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Careers</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privacy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Built by
+            <a
+              href="https://www.miketandy.com"
+              target="_blank"
+              class="footer__link"
+              >Michael Tandy</a
+            >
+            using SCSS. Design by Jonas Schmedtman from his online course
+            <a hef="#" class="footer__link">Advanced CSS and Sass</a>.
+          </p>
+        </div>
+      </div>
+    </footer>
+
     <!-- main element contains the main part of your site -->
     <!-- tag used for the benefit of crawlers and screen readers-->
 
