--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           </div>
         </div>
       </section>
-      <section class="section-tours">
+      <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Most popular tours
@@ -195,7 +195,7 @@
                   <div class="card__price-box">
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">£297</p>
-                    <a href="#" class="btn btn--white u-margin-top-big"
+                    <a href="#popup" class="btn btn--white u-margin-top-big"
                       >Book Now</a
                     >
                   </div>
@@ -230,7 +230,7 @@
                   <div class="card__price-box">
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">£497</p>
-                    <a href="#" class="btn btn--white u-margin-top-big"
+                    <a href="#popup" class="btn btn--white u-margin-top-big"
                       >Book Now</a
                     >
                   </div>
@@ -265,7 +265,7 @@
                   <div class="card__price-box">
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">£897</p>
-                    <a href="#" class="btn btn--white u-margin-top-big"
+                    <a href="#popup" class="btn btn--white u-margin-top-big"
                       >Book Now</a
                     >
                   </div>
@@ -459,6 +459,39 @@
       </div>
     </footer>
 
+    <div class="popup" id="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <a href="#section-tours" class="popup__close">&times;</a>
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Blandit
+            libero volutpat sed cras ornare arcu dui vivamus. Dictum sit amet
+            justo donec enim. Dictumst quisque sagittis purus sit amet volutpat
+            consequat. Nec ultrices dui sapien eget mi proin sed. Netus et
+            malesuada fames ac turpis egestas. Venenatis tellus in metus
+            vulputate eu scelerisque felis imperdiet. Ullamcorper dignissim cras
+            tincidunt lobortis feugiat. Ullamcorper morbi tincidunt ornare massa
+            eget egestas purus viverra. Purus sit amet luctus venenatis lectus
+            magna fringilla urna porttitor. Ornare massa eget egestas purus
+            viverra accumsan in nisl nisi. A cras semper auctor neque vitae
+            tempus quam pellentesque. Ultrices mi tempus imperdiet nulla
+            malesuada pellentesque elit eget gravida.
+          </p>
+          <a href="#" class="btn btn--primary">Book Now</a>
+        </div>
+      </div>
+    </div>
     <!-- main element contains the main part of your site -->
     <!-- tag used for the benefit of crawlers and screen readers-->
 
