Creating @mixin which uses the @content directive to enable me to pass values to media queries. In _base.scss I am changing the base font-size depending on the screen size, which changes my definition of 1rem and so all the rem values in my css.

--- a/index.html
+++ b/index.html
@@ -452,7 +452,8 @@
               class="footer__link"
               >Michael Tandy</a
             >
-            using SCSS. Design by Jonas Schmedtman from his online course
+            using SCSS. Based on a design by Jonas Schmedtman from his online
+            course
             <a hef="#" class="footer__link">Advanced CSS and Sass</a>.
           </p>
         </div>
@@ -492,14 +493,16 @@
         </div>
       </div>
     </div>
-    <!-- main element contains the main part of your site -->
-    <!-- tag used for the benefit of crawlers and screen readers-->
+  </body>
+</html>
+<!-- main element contains the main part of your site -->
+<!-- tag used for the benefit of crawlers and screen readers-->
 
-    <!-- to use Emmet shortcut: -->
-    <!-- .about(tab) creates a div with the class="about"-->
-    <!-- section.about(tab) creates a section element with the class="about"-->
+<!-- to use Emmet shortcut: -->
+<!-- .about(tab) creates a div with the class="about"-->
+<!-- section.about(tab) creates a section element with the class="about"-->
 
-    <!-- <section class="grid-test">
+<!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">
           Col 1 of 2
@@ -562,5 +565,3 @@
             </div>
       </div>
     </section> -->
-  </body>
-</html>
