--- a/index.html
+++ b/index.html
@@ -419,7 +419,14 @@
 
     <footer class="footer">
       <div class="footer__logo-box">
-        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo" />
+        <!-- srcset attribute allows us to specify different images for high and low res screens -->
+        <!-- we write the image names, followed by a density descriptor -->
+        <!-- the 2x image should be twice the size of the 1x -->
+        <img
+          srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
+          alt="Full logo"
+          class="footer__logo"
+        />
       </div>
       <div class="row">
         <div class="col-1-of-2">
