--- a/index.html
+++ b/index.html
@@ -419,14 +419,27 @@
 
     <footer class="footer">
       <div class="footer__logo-box">
+        <!-- ART DIRECTION (different images for different screen sizes) -->
+        <!-- using picture element to send smaller image to phone screens -->
+        <!-- takes a srcset and a media query as attributes -->
+
+        <picture class="footer__logo">
+          <source
+            srcset="
+              img/logo-green-small-1x.png 1x,
+              img/logo-green-small-2x.png 2x
+            "
+            media="(max-width: 37.5em)"
+          />
+          <img
+            srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
+            alt="Full logo"
+          />
+        </picture>
+        <!-- DENSITY SWITCHING (offer different image sizes for high and low res screens)-->
         <!-- srcset attribute allows us to specify different images for high and low res screens -->
         <!-- we write the image names, followed by a density descriptor -->
         <!-- the 2x image should be twice the size of the 1x -->
-        <img
-          srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
-          alt="Full logo"
-          class="footer__logo"
-        />
       </div>
       <div class="row">
         <div class="col-1-of-2">
