--- a/index.html
+++ b/index.html
@@ -91,20 +91,30 @@
           </div>
           <div class="col-1-of-2">
             <div class="composition">
+              <!--RESOLUTION SWITCHING (decreasing image resolution on smaller screens)-->
+              <!-- we use a width descriptor to inform the browser of the width of the images we're providing -->
+              <!-- the sizes attribute tells the browser what vw the image should be at various breakpoints, with a default width at the end -->
+              <!-- use the src attribute as a fallback in case the user is using an older browser that does not support srcset -->
               <img
-                src="img/nat-1-large.jpg"
+                srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+                sizes="(max-width: 900) 20vw, (max-width: 600px), 30vw, 300px"
                 class="composition__photo composition__photo--p1"
                 alt="Landscape of cliffs, trees and a stream with a blue sky"
+                src="img/nat-1-large.jpg"
               />
               <img
-                src="img/nat-2-large.jpg"
+                srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
+                sizes="(max-width: 900) 20vw, (max-width: 600px), 30vw, 300px"
                 class="composition__photo composition__photo--p2"
                 alt="Person cycling alone on a road in the countryside"
+                src="img/nat-2-large.jpg"
               />
               <img
-                src="img/nat-3-large.jpg"
+                srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
+                sizes="(max-width: 900) 20vw, (max-width: 600px), 30vw, 300px"
                 class="composition__photo composition__photo--p3"
                 alt="Person hiking on top of a large hill at sunset"
+                src="img/nat-3-large.jpg"
               />
             </div>
           </div>
@@ -434,6 +444,7 @@
           <img
             srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
             alt="Full logo"
+            src="img/logo-green-2x.png"
           />
         </picture>
         <!-- DENSITY SWITCHING (offer different image sizes for high and low res screens)-->
