--- a/index.html
+++ b/index.html
@@ -57,11 +57,7 @@
 
     <header class="header">
       <div class="header__logo-box">
-        <img
-          src="./img/london/header-logo.png"
-          alt="Logo"
-          class="header__logo"
-        />
+        <img src="img/london/header-logo.png" alt="Logo" class="header__logo" />
       </div>
       <div class="header__text-box">
         <h1 class="heading-primary">
