--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
       <section class="section-stories">
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop>
-            <source src="img/london/london-picadilly.mp4" type="video/mp4" />
+            <source src="img/London/london-picadilly.mp4" type="video/mp4" />
 
             Your browser is not supported
           </video>
@@ -315,7 +315,7 @@
           <div class="story">
             <figure class="story__shape">
               <img
-                src="img/london/tourist-1.jpeg"
+                src="img/London/tourist-1.jpeg"
                 alt="Woman having fun"
                 class="story__img"
               />
