--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- <link rel="stylesheet" href="css/icon-font.css" /> -->
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" type="image/png" href="img/london/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="img/London/favicon.png" />
 
     <title>See London | Official Visitor Guide</title>
   </head>
