--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <header class="header">
       <div class="header__logo-box">
-        <img src="img/london/header-logo.png" alt="Logo" class="header__logo" />
+        <img src="img/London/header-logo.png" alt="Logo" class="header__logo" />
       </div>
       <div class="header__text-box">
         <h1 class="heading-primary">
@@ -99,17 +99,17 @@
               <img
                 class="composition__photo composition__photo--p1"
                 alt="London Underground"
-                src="img/london/tube-2.jpeg"
+                src="img/London/tube-2.jpeg"
               />
               <img
                 class="composition__photo composition__photo--p2"
                 alt="St Paul's Cathedral"
-                src="img/london/st-pauls-1.jpeg"
+                src="img/London/st-pauls-1.jpeg"
               />
               <img
                 class="composition__photo composition__photo--p3"
                 alt="Tower Bridge"
-                src="img/london/tower-bridge-3.jpeg"
+                src="img/London/tower-bridge-3.jpeg"
               />
             </div>
           </div>
@@ -342,7 +342,7 @@
           <div class="story">
             <figure class="story__shape">
               <img
-                src="img/london/tourist-2.jpeg"
+                src="img/London/tourist-2.jpeg"
                 alt="Man drinking coffee"
                 class="story__img"
               />
@@ -440,7 +440,7 @@
         <!-- takes a srcset and a media query as attributes -->
 
         <picture class="footer__logo">
-          <img alt="Full logo" src="img/london/footer-logo.png" />
+          <img alt="Full logo" src="img/London/footer-logo.png" />
         </picture>
       </div>
       <div class="row">
@@ -484,12 +484,12 @@
       <div class="popup__content">
         <div class="popup__left">
           <img
-            src="img/london/union-jack-1.jpeg"
+            src="img/London/union-jack-1.jpeg"
             alt="Tour photo"
             class="popup__img"
           />
           <img
-            src="img/london/camden-1.jpeg"
+            src="img/London/camden-1.jpeg"
             alt="Tour photo"
             class="popup__img"
           />
